# vda5050_fleet_adapter

./: README.md
vda5050_fleet_adapter/: config.yaml  package.xml  setup.cfg  setup.py
vda5050_fleet_adapter/vda5050_fleet_adapter/: RobotClientAPI.py  adapter_utils.py  fleet_adapter.py
