<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vda5050_fleet_adapter</name>
  <version>0.0.0</version>
  <description>An experimental fleet adapter for VDA5050</description>
  <maintainer email="cenkcetix@gmail.com">Cenk</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rmf_fleet_adapter_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
